{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 44,
  "lineage": "b6844d59-c67b-54d0-0fa6-053ae9ea55ef",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b89f9b2e544a87ef",
            "association_id": "eipassoc-044c2c71fa815d74e",
            "domain": "vpc",
            "id": "eipalloc-0b89f9b2e544a87ef",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b52f35d049bb9824",
            "private_dns": "ip-10-0-0-56.ec2.internal",
            "private_ip": "10.0.0.56",
            "public_dns": "ec2-44-208-156-239.compute-1.amazonaws.com",
            "public_ip": "44.208.156.239",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "tf-elasticIP"
            },
            "tags_all": {
              "Name": "tf-elasticIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "lab2tf-ec2-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06878d265978313ca",
            "arn": "arn:aws:ec2:us-east-1:912058622892:instance/i-08f1883e7f14693a1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08f1883e7f14693a1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08459b825698a5735",
            "private_dns": "ip-10-0-0-132.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.132",
            "public_ip": "54.198.41.201",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0714c3b5124186166",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-056f88f50f3e5cb30",
            "tags": {
              "Name": "lab2tf terrafromec2"
            },
            "tags_all": {
              "Name": "lab2tf terrafromec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09d06cdaed6d33eaa"
            ]
          },
          "dependencies": [
            "aws_security_group.sec-group",
            "aws_subnet.publicsubnet",
            "aws_vpc.tflab2Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06878d265978313ca",
            "arn": "arn:aws:ec2:us-east-1:912058622892:instance/i-0e5d118b9d5697563",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e5d118b9d5697563",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03f326b0bac9b5f5a",
            "private_dns": "ip-10-0-1-126.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.126",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05b128f3d749cc038",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0032896d528e42562",
            "tags": {
              "Name": "tflab2privateinstance"
            },
            "tags_all": {
              "Name": "tflab2privateinstance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09d06cdaed6d33eaa"
            ]
          },
          "dependencies": [
            "aws_security_group.sec-group",
            "aws_subnet.privatesubnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tflab2GW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:912058622892:internet-gateway/igw-01a8282ba90ea12d5",
            "id": "igw-01a8282ba90ea12d5",
            "owner_id": "912058622892",
            "tags": {
              "Name": "tflab2 internetgateway"
            },
            "tags_all": {
              "Name": "tflab2 internetgateway"
            },
            "vpc_id": "vpc-00a641b3a185765d1"
          },
          "dependencies": [
            "aws_vpc.tflab2Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b89f9b2e544a87ef",
            "connectivity_type": "public",
            "id": "nat-075906116fe27d01d",
            "network_interface_id": "eni-0b52f35d049bb9824",
            "private_ip": "10.0.0.56",
            "public_ip": "44.208.156.239",
            "subnet_id": "subnet-056f88f50f3e5cb30",
            "tags": {
              "Name": "lab2tf nat-gateway"
            },
            "tags_all": {
              "Name": "lab2tf nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.ip",
            "aws_subnet.publicsubnet",
            "aws_vpc.tflab2Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tflab2_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:912058622892:route-table/rtb-07f8ece83d3ba06e5",
            "id": "rtb-07f8ece83d3ba06e5",
            "owner_id": "912058622892",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01a8282ba90ea12d5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tflab2 routetable"
            },
            "tags_all": {
              "Name": "tflab2 routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-00a641b3a185765d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tflab2GW",
            "aws_vpc.tflab2Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tfrouteTable-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:912058622892:route-table/rtb-0a713662958d51441",
            "id": "rtb-0a713662958d51441",
            "owner_id": "912058622892",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-075906116fe27d01d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "t4routeTable-2"
            },
            "tags_all": {
              "Name": "t4routeTable-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-00a641b3a185765d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.nat-gateway",
            "aws_vpc.tflab2Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tflab2associate2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-088441e211b4e4021",
            "route_table_id": "rtb-0a713662958d51441",
            "subnet_id": "subnet-0032896d528e42562"
          },
          "dependencies": [
            "aws_eip.ip",
            "aws_nat_gateway.nat-gateway",
            "aws_route_table.tfrouteTable-2",
            "aws_subnet.privatesubnet",
            "aws_subnet.publicsubnet",
            "aws_vpc.tflab2Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tfpublicsubnetasso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a5d1ab7964fa854b",
            "route_table_id": "rtb-07f8ece83d3ba06e5",
            "subnet_id": "subnet-056f88f50f3e5cb30"
          },
          "dependencies": [
            "aws_internet_gateway.tflab2GW",
            "aws_route_table.tflab2_rt",
            "aws_subnet.publicsubnet",
            "aws_vpc.tflab2Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:912058622892:security-group/sg-09d06cdaed6d33eaa",
            "description": "Security group for allowing ",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09d06cdaed6d33eaa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "httpd-secgroup",
            "name_prefix": "",
            "owner_id": "912058622892",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00a641b3a185765d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tflab2Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:912058622892:subnet/subnet-0032896d528e42562",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0032896d528e42562",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "912058622892",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tflab2 privatesubnet"
            },
            "tags_all": {
              "Name": "tflab2 privatesubnet"
            },
            "vpc_id": "vpc-00a641b3a185765d1"
          },
          "dependencies": [
            "aws_vpc.tflab2Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:912058622892:subnet/subnet-056f88f50f3e5cb30",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-056f88f50f3e5cb30",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "912058622892",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tflab2 publicsubnet"
            },
            "tags_all": {
              "Name": "tflab2 publicsubnet"
            },
            "vpc_id": "vpc-00a641b3a185765d1"
          },
          "dependencies": [
            "aws_vpc.tflab2Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tflab2Vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:912058622892:vpc/vpc-00a641b3a185765d1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f1bada725b6dfb88",
            "default_route_table_id": "rtb-014ddc9488a00b872",
            "default_security_group_id": "sg-0d1becf9a2c715f38",
            "dhcp_options_id": "dopt-001935c8204d59124",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00a641b3a185765d1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-014ddc9488a00b872",
            "owner_id": "912058622892",
            "tags": {
              "Name": "tf lab2 vpc"
            },
            "tags_all": {
              "Name": "tf lab2 vpc"
            }
          }
        }
      ]
    }
  ]
}